<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_logo_cd"
        android:id="@+id/app_logo"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/username_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_email"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/label_textsize"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/app_logo"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
        android:padding="@dimen/default_padding"/>

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:hint="@string/login_email_hint"
        android:textAlignment="center"
        android:padding="@dimen/default_padding"
        android:textColorHint="@color/textColorPrimary"
        android:textStyle="normal"
        android:fontFamily="@string/font_family_medium"
        android:textSize="@dimen/default_textsize"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/username_textview"
        app:layout_constraintTop_toTopOf="@+id/username_textview"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/label_textsize"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/username_textview"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
        android:padding="@dimen/default_padding" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:hint="@string/login_password_hint"
        android:textAlignment="center"
        android:padding="@dimen/default_padding"
        android:textColorHint="@color/textColorPrimary"
        android:inputType="textPassword"
        android:textStyle="normal"
        android:fontFamily="@string/font_family_medium"
        android:textSize="@dimen/default_textsize"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toRightOf="@+id/password_textview"
        app:layout_constraintTop_toTopOf="@+id/password_textview"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/create_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_create_user"
        android:textSize="@dimen/label_textsize"
        android:textAllCaps="true"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/login_user_button"
        android:background="@color/colorAccentDark"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/login_user_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:text="@string/login_button"
        android:textSize="@dimen/label_textsize"
        android:textAllCaps="true"
        android:textColor="@color/textColorAccent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <LinearLayout
        android:id="@+id/loadingBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/loadingIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:theme="@style/IconAccent"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>